# GeneralRouter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: format.cmake
examples/: CMakeLists.txt  tcp_client_demo.cpp
sample/: main.cpp
src/: circularbuffer.h  connection.h  main.cpp  message.h  tcpclient.cpp  tcpclient.h  tcpserver.h  worker.h
test/: message.txt
tests/: CMakeLists.txt  circularbuffer_test.cpp
